# open-lineage-connect

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Cargo.toml  Justfile  Makefile  README.md  buf.gen.yaml  docker-compose.iceberg.yaml  docker-compose.yaml
.cursor/rules/: branching-workflow.mdc
.github/workflows/: ci.yml
crates/table-service/: Cargo.toml  Dockerfile
crates/table-service/src/: config.rs  lib.rs  main.rs  service.rs
crates/table-service/src/unity/: mod.rs
crates/table-service/src/writer/: delta.rs  iceberg.rs  mod.rs  schema.rs  sink.rs  unity.rs
crates/table-service/tests/: iceberg_integration_test.rs  integration_test.rs
demo/results/deltalake/lineage-events/event_kind=run/: part-00001-47580015-f984-49bd-9e9e-e6a656328642-c000.snappy.parquet  part-00001-93f4bbf1-e840-428f-92db-f16a7f5cea89-c000.snappy.parquet  part-00001-a34125be-2cd1-46e7-8385-9a739b94d504-c000.snappy.parquet  part-00001-f0f4ed39-b450-455d-a024-bb6819e1ee21-c000.snappy.parquet
demos/datasets/delta/orders/: part-00000-a6246196-a70a-4889-a9d6-d45b662c953e-c000.snappy.parquet  part-00000-e5998747-60b2-4397-a623-36dbfe1da015-c000.snappy.parquet
demos/datasets/delta/users/: part-00000-02a5f06e-e51c-4701-8e39-7011eccf0c5e-c000.snappy.parquet
demos/datasets/json/: users.ndjson
demos/jobs/: show_lineage_events.py  user_orders_join.py
ecs/: task-definition.json
internal/forwarder/: forwarder.go  forwarder_test.go
internal/health/: handler_test.go
internal/ingest/: converter.go  converter_test.go  handler.go  handler_test.go
internal/interceptor/: auth.go
internal/service/: lineage.go  lineage_graph.go  lineage_graph_test.go  lineage_test.go
lineage-graph/: README.md
lineage-graph/deltalake/: README.md  delta_schema.json  docker-compose-delta-graph.yaml  process_lineage_events.py  register.sh
lineage-graph/deltalake/spark-conf/: spark-defaults.conf
open-lakehouse-table-service/: Cargo.toml  Dockerfile  build.rs
open-lakehouse-table-service/.cargo/: config.toml
open-lakehouse-table-service/src/: config.rs  lib.rs  main.rs  service.rs
open-lakehouse-table-service/src/writer/: delta.rs  mod.rs  schema.rs
open-lakehouse-table-service/tests/: iceberg_integration_test.rs  integration_test.rs
proto/lineage/v1/: lineage.proto
proto/table/v1/: table_writer.proto
research/: spark-openlineage-architecture.md  spark4-lineage-extraction.md
resources/examples/lineage/batch/: mixed-event-batch.json  run-event-batch.json
resources/examples/lineage/column-lineage/: run-event-with-column-lineage.json
resources/examples/lineage/single/: dataset-event.json  job-event.json  run-event.json
resources/specs/: openapi.json
scripts/: bootstrap-lakekeeper.sh  deploy-ecs-lineage.sh  e2e-test.sh  ecr-push-lineage.sh  ecr-push-table.sh  spark-connect-e2e.sh
services/lineage/: .dockerignore  Dockerfile  go.mod  go.sum
services/lineage/cmd/server/: main.go
services/lineage/internal/forwarder/: forwarder.go  forwarder_test.go
services/lineage/internal/health/: handler.go  handler_test.go
services/lineage/internal/ingest/: converter.go  handler_test.go
services/lineage/internal/interceptor/: auth.go  auth_test.go  validate.go  validate_test.go
services/lineage/internal/service/: lineage.go  lineage_test.go
spark-openlineage-plugin/: .gitignore  .scalafmt.conf  COMPAT.md  README.md  build.sbt
spark-openlineage-plugin/project/: plugins.sbt
spark-openlineage-plugin/src/test/resources/: log4j2-test.properties
terraform/ecs-lineage/: .gitignore  README.md  backend.s3.tf.example  dns.tf  ecs.tf  iam.tf  network.tf  outputs.tf  secrets.tf  security.tf  terraform.tfvars.example  variables.tf
(+123 files in other folders)
