[package]
name = "open-lakehouse-table-service"
version = "0.1.0"
edition = "2024"
rust-version = "1.88"

[dependencies]
connectrpc = { version = "0.2", features = ["axum", "client", "server"] }
buffa = { version = "0.2", features = ["json"] }
buffa-types = { version = "0.2", features = ["json"] }
deltalake = { version = "0.28", features = ["s3", "datafusion"] }
tokio = { version = "1", features = ["full"] }
axum = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
http-body = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
futures = "0.3"

[dev-dependencies]
tempfile = "3"

[build-dependencies]
connectrpc-build = "0.2"
